# resy-cli

resy-rust/: .gitignore  COMPETITIVE_MODE.md  Cargo.toml  DEBUG_EC2.md  DEPLOYMENT.md  EC2_500_STILL_FAILING.md  EC2_QUICKFIX.md  FINAL_DEBUG.md  LOGGING.md  QUICKSTART.md  QUICKSTART_LAPTOP.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  env.example
resy-rust/scripts/: README.md  check-schedule.sh  debug-env.sh  examples.sh  fix-env.sh  run.sh  schedule-macos.sh  schedule.sh  test-connection.sh  test-laptop.sh  vm-setup.sh
resy-rust/src/: api.rs  main.rs  types.rs
